--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,23 @@ a, a:hover
 {
 	color:white;
 }
+
+@media only screen and (max-width: 920px) {
+
+	p
+	{
+		font-size: 18px;
+	}
+	
+	.content
+	{
+		width:90%;
+	}
+	.section
+	{
+		background-position: scroll !important;
+	}
+
+
+
+}
