--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body
 	padding-right: 5%;
 	background-repeat:no-repeat;
 	background-position:50% 20% !important;
-	
+	background-attachment: fixed !important;
 	
 }
 
